syntax = "proto2"; 

package WORServer.Api.Prizes.List; 

enum ResponseCode { 
	Good = 0; 
	Fail = 1; 
	NotEnoughMoney = 2; 
	AlreadyPlaying = 3; 
	TimeLimit = 4; 
}
message Request {
	required string ApiToken = 1; 
} 
message PrizeInfo { 
	required int32 Id = 1; 
	required string Name = 2; 
	required string Description = 3; 
	required string UrlImage = 4; 
	required int32 Price = 5; 
} 
message Response { 
	required ResponseCode Status = 1; 
	repeated PrizeInfo Prizes = 2; 
}