syntax = "proto2"; 

package WORServer.Api.User.Info; 

enum ResponseCode {
	Good = 0; 
	Fail = 1; 
	NotEnoughMoney = 2; 
	AlreadyPlaying = 3; 
	TimeLimit = 4; 
} 
message Request { 
	required string ApiToken = 1; 
} 
message Response { 
	required ResponseCode Status = 1; 
	optional UserInfo User = 2; 
} 
message UserInfo { 
	required int32 Id = 1; 
	optional int32 GameId = 2 [default = 0]; 
	optional bool IsTakePrize = 3 [default = false]; 
	optional int32 GameWaitTimeLeft = 4 [default = 0]; 
	required int32 Score = 5; 
}